--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fangcha/eslint",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "main": "./src/index.js",
   "description": "Webpack configs",
   "repository": "https://github.com/fangqk1991/fc-eslint.git",
@@ -24,6 +24,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "eslint-plugin-vue": "^6.1.2",
-    "eslint-plugin-react": "^7.18.3"
+    "eslint-plugin-react": "^7.18.3",
+    "prettier": "^2.5.1"
   }
 }
